# Real-Time-Sudoku-Solver-Using-OpenCV

./: README.md  digit_cnn.pth  main.py  main_batched.py  printed_digit_model.pkl  pyproject.toml  side.py  test_model_load.py  train_model.py
