[project]
name = "cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-contrib-python>=4.13.0.92",
    "numpy",
    "onnx>=1.21.0",
    "torch>=2.11.0",
]

[project.optional-dependencies]
training = [
    "torch",
    "onnx",
]
